# trackmania-asset-generation

./: .gitignore  LICENSE  README.md  pyproject.toml
configuration/: base.yaml
trackmania/: cli.py  config.py  scrap.py
trackmania/dataset/: __init__.py  dataset.py  transform.py
trackmania/diffusion/: sampling.py  utils.py
trackmania/embedding/: __init__.py  time_embedding.py
trackmania/model/: __init__.py  block.py  diffusion.py  dummy.py  ema.py  unet.py
trackmania/tasks/: base.py  registry.py
trackmania/viz/: image.py
